--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,4 @@
-xt7-player/xt7-player usr/bin
-xt7-player/xt7-player.png usr/share/pixmaps
-xt7-player/xt7-player.desktop usr/share/applications
+xt7-player usr/bin
+xt7-player.png usr/share/pixmaps
+debian/xt7-player.desktop usr/share/applications
 
